# desigualdad_verde_cdmx

./: .gitignore  LICENSE  README.md  clqxhs.geojson  example1-raster.ipynb  hfpwld.geojson  pyproject.toml  qjrory.geojson  requirements.txt
.atl/: .skill-registry.cache.json  skill-registry.md
encuesta/: alcaldias_municipios_zmvm.txt  contenido-redes.md  preguntas-encuesta.md
notebooks/: 01_exploracion_landsat.ipynb  01_exploration_lst.ipynb  02_dual_visualization_no2_lst.ipynb  02_mapping_ndvi.ipynb  03_mapping_no2.ipynb  03_ndvi_visualization.ipynb  05_exploration_pm.ipynb  05_marginacion.ipynb  06_salud_respiratoria.ipynb  hvvpln.geojson
scripts/: compute_municipio_indicators.py  export_maps.py
src/: __init__.py  air_quality.py  aoi.py  config.py  data_pipeline.py  interpolation.py  landsat.py  plot_utils.py  sentinel5p.py  stations.py  visualization.py
